--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
     "test": "npm run test:ts",
     "format": "prettier src docs --write"
   },
+  "dependencies": {
+    "@vueuse/head": "^1.3.1",
+    "tailwindcss": "^3.3.3",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
+  },
   "devDependencies": {
     "@types/node": "^20.5.1",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vitest/coverage-c8": "^0.33.0",
     "@vitest/coverage-istanbul": "^0.34.2",
     "@vitest/ui": "^0.34.2",
@@ -30,10 +37,8 @@
     "prettier-plugin-tailwindcss": "^0.5.3",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
-    "vitest": "^0.34.2"
-  },
-  "dependencies": {
-    "tailwindcss": "^3.3.3"
+    "vitest": "^0.34.2",
+    "vue-tsc": "^1.8.5"
   },
   "license": "GPL-3.0-or-later"
 }
