--- a/package.json
+++ b/package.json
@@ -3,39 +3,42 @@
   "private": true,
   "version": "0.0.1",
   "repository": "github:xieyuheng/analytic-geometry",
-  "type": "module",
   "files": [
     "lib"
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "build:ts": "tsc",
-    "build:ts:watch": "tsc --watch",
-    "test:ts": "vitest --dir src --threads false --run",
-    "test:watch": "vitest --dir src --threads false",
-    "test:coverage": "vitest --dir src --threads false --run --coverage ",
-    "test:gui": "vitest --dir src --threads false --ui",
-    "test": "npm run test:ts",
-    "format": "prettier src docs --write"
+    "build": "vite build",
+    "check:vue": "vue-tsc --noEmit",
+    "check:vue:watch": "vue-tsc --noEmit --watch",
+    "check:ts": "tsc --noEmit",
+    "check:ts:watch": "tsc --noEmit --watch",
+    "test": "vitest --run",
+    "format": "prettier src --write"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.18",
+    "@vueuse/core": "^10.3.0",
+    "lodash": "^4.17.21",
+    "js-base64": "^3.7.5",
     "@vueuse/head": "^1.3.1",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.197",
     "@types/node": "^20.5.1",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vitest/coverage-c8": "^0.33.0",
-    "@vitest/coverage-istanbul": "^0.34.2",
-    "@vitest/ui": "^0.34.2",
-    "@xieyuheng/test-runner": "^0.2.9",
+    "@volar/vue-typescript": "^1.6.5",
+    "postcss": "^8.4.28",
+    "autoprefixer": "^10.4.15",
     "prettier": "^3.0.2",
     "prettier-plugin-organize-imports": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "typescript": "^5.1.6",
+    "vite-bundle-visualizer": "^0.10.0",
+    "vite-plugin-rewrite-all": "^1.0.1",
     "vite": "^4.4.9",
     "vitest": "^0.34.2",
     "vue-tsc": "^1.8.5"
