--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
     "@vueuse/core": "^10.3.0",
-    "lodash": "^4.17.21",
-    "js-base64": "^3.7.5",
     "@vueuse/head": "^1.3.1",
+    "emulate-tab": "^1.2.1",
+    "focus-trap": "^7.5.2",
+    "js-base64": "^3.7.5",
+    "lodash": "^4.17.21",
+    "qs": "^6.11.2",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -29,16 +32,17 @@
   "devDependencies": {
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.5.1",
+    "@types/qs": "^6.9.7",
     "@vitejs/plugin-vue": "^4.2.3",
-    "postcss": "^8.4.28",
     "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
     "prettier": "^3.0.2",
     "prettier-plugin-organize-imports": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "typescript": "^5.1.6",
+    "vite": "^4.4.9",
     "vite-bundle-visualizer": "^0.10.0",
     "vite-plugin-rewrite-all": "^1.0.1",
-    "vite": "^4.4.9",
     "vitest": "^0.34.2",
     "vue-tsc": "^1.8.5"
   },
